--- a/source/_posts/个人能力整改措施的计划.md
+++ b/source/_posts/个人能力整改措施的计划.md
@@ -2,8 +2,11 @@
 title: 个人能力整改措施的计划
 ---
 
-### 为了提高个人的综合素质和工作能力，根据软件一部文化宣讲会传达的精神和任部长的重要讲话，联系自己的思想和工作实际，对自身存在的问题做了深刻的反思，查找出现问题的根源，并将原因分析透彻，制定出详实的可操作的整改措施，达到自我认知、自我提高的目的。 ###
-
+为了提高个人的综合素质和工作能力，根据软件一部文化宣讲会传达的精神和任部长的重要讲话，联系自己的思想和工作实际，对自身存在的问题做了深刻的反思，查找出现问题的根源，并将原因分析透彻，制定出详实的可操作的整改措施，达到自我认知、自我提高的目的。
+1. 存在的主要问题
+2. 问题的主要原因
+3. 整改措施
+<!-- more -->
 ## 一、存在的主要问题 ###
 1. 思想上比较浮躁。在工作中遇到繁琐、复杂的事情，处理的时候暴露的问题就是不够细心，会犯一些低级的错误，导致重复检查，影响了工作效率。
 2. 工作缺乏深入研究和细致，不善于创造性地开展工作和转变工作方式。对问题的分析不够深入,思考不够深刻,没有注意到工作方法的重要性。工作计划也不是很清晰，同时，还存在一种浮躁心理、急躁心态、急于求成的思想，毅力不够，具体行动不足。
