--- a/source/_posts/2017工作总结.md
+++ b/source/_posts/2017工作总结.md
@@ -1,19 +1,19 @@
 ---
-title: 2017年年度工作总结
+title: 2017年度工作总结
 ---
 
-# 会议纪要 #
+# 纪要 #
 
 > 光阴似箭，岁月如梭...
 <!-- more -->
 ## 一、2017年工作总结与回顾 ##
-光阴似箭，岁月如梭，2017已经过去。今年三月份我进入公司加入培训系统组，负责PC端和手机站的部分前端开发工作，新增了许多功能模块，一步步见证了项目业务从简单到丰满的变化，同时自身也得到了锻炼，实现了自我成长。
+&ensp;&ensp;&ensp;&ensp;光阴似箭，岁月如梭，2017已经过去。今年三月份我进入公司加入培训系统组，负责PC端和手机站的部分前端开发工作，新增了许多功能模块，一步步见证了项目业务从简单到丰满的变化，同时自身也得到了锻炼，实现了自我成长。
 
 本人一直以严谨的态度和积极的热情投身于学习和工作中，努力加强自身专业知识技能的提升同时保质保量完成本职工作，虚心接受组长和同事的意见，总结工作中的可提高的地方，现将这一年的工作总结如下：
 
 一、思想进步，态度端正
 
-在思想上严格要求自我，努力提高自我的思想觉悟，提升自我的内涵素养，拓展视野，让自己更好的与时俱进，适应社会和岗位发展需求。
+&ensp;&ensp;&ensp;&ensp;在思想上严格要求自我，努力提高自我的思想觉悟，提升自我的内涵素养，拓展视野，让自己更好的与时俱进，适应社会和岗位发展需求。
 
 二、 立足本职，做好工作
 
@@ -40,7 +40,7 @@ title: 2017年年度工作总结
 	4. 手机端M站：手机M站PK模块的动画特效制作，图表展示功能，考题解析等部分的制作
 	5. 前端文档的整理，制定一些前端开发规范和规则，总结系统现存的问题和不足，完成redmine上指定的任务和bugzilar的bug修复工作
 	
-   认真完成组长分配的开发任务，梳理清楚业务逻辑，并在自身经验的认识上主动优化改正系统中现存的问题，总结工作中的不足和系统待改进的地方并归纳成相关文档，针对问题适时提出自己的看法。 培养独立思考能力，在计划实施和执行的过程中善于发现问题，思考改进措施。
+   &ensp;&ensp;&ensp;&ensp;认真完成组长分配的开发任务，梳理清楚业务逻辑，并在自身经验的认识上主动优化改正系统中现存的问题，总结工作中的不足和系统待改进的地方并归纳成相关文档，针对问题适时提出自己的看法。 培养独立思考能力，在计划实施和执行的过程中善于发现问题，思考改进措施。
 
 三、 专业技术能力提升
 在工作中遇到难题，阅读相关技术文档，学习新技能，保持不断学习的积极性，定期对自己进行客观的评价，及时发现不足并改正。
@@ -55,7 +55,7 @@ title: 2017年年度工作总结
 
 > 问题的主要原因：
 
-> 存在上述不足，虽然有一定的客观因素，但更主要的还是主观因素影响。深刻剖析产生这些问题的思想根源，概括起来主要是： 理论知识理解不透彻，业务素质不到家，学习不重视，领导和驾驭工作能力还不强、水平有待提高。
+> &ensp;&ensp;&ensp;&ensp;存在上述不足，虽然有一定的客观因素，但更主要的还是主观因素影响。深刻剖析产生这些问题的思想根源，概括起来主要是： 理论知识理解不透彻，业务素质不到家，学习不重视，领导和驾驭工作能力还不强、水平有待提高。
 
 ### 以后的改正方向： ###
 -  思想上正确认识自我，认真努力改正工作态度问题，认真仔细，有计划有条理的完成任务，不骄不躁，注意处理好细节上的问题。
